--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     <!-- Create a svg for China map -->
     <div style="display: flex; flex-direction: row;">
         <div style="display: flex; flex-direction: column; align-items: center;">
-            <div style="display: flex; flex-direction: row; align-items: center;">
+            <div style="display: flex; flex-direction: row;">
                 <svg id="china" width="700" height="700" style="margin-left:30px;"></svg>
                 
                 <div style="display: flex; flex-direction: column; margin-left: 50px;">
