fix center alignment

--- a/index.html
+++ b/index.html
@@ -153,6 +153,8 @@
         border-radius: 10px;
         cursor: pointer;
     }
+
+
 </style>
 
 </html>
@@ -165,7 +167,7 @@
 
     <!-- Create a svg for China map -->
     <div style="display: flex; flex-direction: row;">
-        <div style="display: flex; flex-direction: column; align-items: center;">
+        <div style="display: flex; flex-direction: column; align-items: center; justify-content: center;">
             <div style="display: flex; flex-direction: row;">
                 <svg id="china" width="700" height="700" style="margin-left:30px;"></svg>
 
